--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+* {
+    font-family: helvetica, Arial, sans-serif;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -15,11 +18,23 @@ body {
     align-items: center;
     justify-content: space-around;
     margin: 0px;
+    margin-bottom: 32px;
 }
 
-.header-logo {
+.header-logo, .hero-main-text {
     font-size: 24px;
     color: #F0FAF8;
+}
+
+.hero-sub-text {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin-top: 8px;
+    margin-bottom: 4px;
+}
+
+.hero-sub-text.desc {
+    max-width: 400px;
 }
 
 ul {
@@ -30,6 +45,29 @@ ul {
 
 a {
     text-decoration: none;
-    color: #E5E7EB;
-    font-size: 18px;
+}
+
+.hero-main {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    padding-bottom: 32px;
+}
+
+.button-1 {
+    color: white;
+    background-color: #3882F6;
+    padding: 8px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: 0px;
+}
+
+.gray-space {
+    background-color: gray;
+    width: 250px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
