Add css to the quote row
this makes the quote row have a light gray color background

this also pads the section to the top and bottom

the quote & the quote ref have been sized appropriately

the quote ref has also been bolded

--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,24 @@ a {
 .info-subtext {
     max-width: 120px;
 }
+
+.quote-section {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote {
+    font-size: 36px;
+    max-width: 800px;
+    font-weight: lighter;
+}
+
+.quote-ref {
+    margin-left: 500px;
+    margin-top: 12px;
+}
