--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,56 @@ a {
     margin-left: 500px;
     margin-top: 12px;
 }
+
+.cta-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta {
+    background-color: #3882F6;
+    flex-basis: 600px;
+    min-height: 80px;
+    margin: 60px;
+    border-radius: 6px;
+    -moz-border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.cta-main-text, .cta-sub-text {
+    color: white;
+}
+
+.cta-main-text {
+    font-weight: 900;
+}
+
+.cta-sub-text {
+    font-weight: 100;
+}
+
+.button-2 {
+    background-color: #3882F6;
+    color: white;
+    border: solid white 1px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    padding-right: 8px;
+    padding-left: 8px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-top: 6px;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #F0FAF8;
+    margin: 0px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
